# sdk

./: .curlrc  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .npmrc  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.orig  Cargo.nix  Cargo.toml  Changelog.md  LICENSE  README.adoc  README.md  RELEASE.md  RELEASE_PROCESS.md  action.yml  assets-minimal.nix  assets.nix  cargo-audit.nix  cargo.toml  check-binaries.nix  check.nix  clippy.toml  default.nix  deny.toml  dfx-minimal.nix  dfx-shell.nix  dfx.nix  distributed-canisters.nix  foo.sh  icx-proxy.nix  install.sh  jobset.nix  june-4-sdk.txt  manifest.json  (+10 more)
dfx/: .gitignore  Cargo.toml  README.adoc  assets.nix  default.nix  demo.nix  package.nix  shell.nix
dfx-mock/: Cargo.toml  default.nix  demo.nix  package.nix  shell.nix
dfx-mock/assets/: build.rs  dfinity.aart
dfx-mock/assets/files/: README.md  dfinity.json  main.as
dfx-mock/assets/new_project_files/: README.md  dfinity.json
dfx-mock/assets/v0_1_0_files/: as-ld  as-rts.wasm  asc  nodemanager  test.wasm
dfx-mock/src/: main.rs
dfx-mock/src/actorscript/: mod.rs
dfx-mock/src/commands/: build.rs  config.rs  mod.rs  new.rs  send.rs  start.rs
dfx-mock/src/config/: cache.rs  dfinity.rs  mod.rs
dfx-mock/src/util/: logo.rs  mod.rs
dfx/assets/: README.adoc  build.rs  dfinity-color.aart  dfinity.aart  welcome.txt
dfx/assets/build_assets/assets/: index.html
dfx/assets/command_defs/: build.yaml  call.yaml  dfx.yaml  start.yaml
dfx/assets/language_bindings/: canister.js
dfx/assets/new_project_files/: .gitignore  README.md  __dot__gitignore  dfinity.json  dfx.json
dfx/assets/new_project_files/app/: hello.js  index.html
dfx/assets/new_project_node_files/: package.json  webpack.config.js
dfx/assets/v0_1_0_files/: didc
dfx/examples/hello/: dfinity.json
dfx/messages/: welcome.txt
dfx/src/: error.rs  lib.rs  main.rs  version.rs
dfx/src/commands/: build.rs  call.rs  config.rs  ide.rs  language_service.rs  mod.rs  new.rs  new.yaml  query.rs  send.rs  start.rs  stop.rs  upgrade.rs  version.rs
dfx/src/commands/auth/: add.rs  list.rs  mod.rs  remove.rs
dfx/src/commands/cache/: delete.rs  mod.rs  show.rs
dfx/src/commands/canister/: call.rs  create.rs  delete.rs  install.rs  mod.rs  query.rs  request_status.rs  upgrade.rs
dfx/src/commands/generate/: canister.rs  mod.rs  upgrade.rs
dfx/src/config/: cache.rs  dfinity.rs  mod.rs
dfx/src/lib/: api_client.rs  build.rs  canister_info.rs  env.rs  error.rs  message.rs  mod.rs  proxy.rs  webserver.rs
dfx/src/lib/error/: build.rs  mod.rs
dfx/src/util/: assets.rs  command_defs.rs  logo.rs  mod.rs
dfx/src/util/clap/: validators.rs
dfx/tests/: query.rs
icp-cli/crates/host/: Cargo.toml
icp-cli/crates/host/src/: bindings.rs  cli.rs  command_config.rs  commands.rs  const_node.rs  execute.rs  execution.rs  graph.rs  host.rs  main.rs  node.rs  node_state.rs  nodes.rs  output_promise.rs  parse.rs  plan.rs  prettify.rs  print_node.rs  registry.rs  runtime.rs  tests.rs  value.rs  workflow.rs
icp-cli/crates/plugin/: Cargo.toml
icp-cli/crates/plugin/src/: bindings.rs  lib.rs  quote_prettify.rs
lib/ic_http_agent/: Cargo.toml  README.adoc
lib/ic_http_agent/src/: agent.rs
lib/ic_http_agent/src/agent/: agent.rs  agent_test.rs  mod.rs
lib/ic_http_agent/src/types/: blob.rs  canister_id.rs  request_id.rs
lib/serde_idl/: Cargo.toml  README.adoc
lib/serde_idl/src/: custom_ser.rs  de.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  ser.rs  typed_ser.rs  types.rs  value.rs
lib/serde_idl/src/types/: mod.rs
lib/serde_idl/tests/: both.rs  idl_parser.rs  idltype.rs  parser.rs  ser.rs  serde.rs  value.rs
src/agent/rust/: Cargo.toml
src/agent/rust/src/: lib.rs
src/canisters/frontend/certified-assets/: Cargo.toml  README.md  assets.did  build.sh  dfx.json
src/canisters/frontend/ic-asset/: Cargo.toml
src/canisters/frontend/ic-certified-assets/: CHANGELOG.md  Cargo.toml  README.md  assets.did
src/canisters/frontend/ic-frontend-canister/: .gitignore  Cargo.toml
src/canisters/frontend/icx-asset/: Cargo.toml  README.md
src/dfx/: Cargo.toml  Cargo.toml.orig  README.adoc
src/dfx-core/: CHANGELOG.md  Cargo.toml
src/dfx-core/assets/: build.rs
src/dfx-core/src/: build.rs  lib.rs
src/dfx-core/src/canister/: mod.rs  url.rs
src/dfx-core/src/cli/: mod.rs
src/dfx-core/src/config/: cache.rs  directories.rs  mod.rs  project_templates.rs
src/dfx-core/src/error/: archive.rs  builder.rs  cache.rs  canister.rs  canister_id_store.rs  cli.rs  config.rs  dfx_config.rs  encryption.rs  extension.rs  foundation.rs  fs.rs  get_current_exe.rs  identity.rs  interface.rs  io.rs  keyring.rs  load_dfx_config.rs  load_networks_config.rs  load_tool_config.rs  mod.rs  network_config.rs  process.rs  reqwest.rs  root_key.rs  socket_addr_conversion.rs  structured_file.rs  unified_io.rs  uri.rs  wallet_config.rs
src/dfx-core/src/extension/: catalog.rs  installed.rs  mod.rs  url.rs
src/dfx-core/src/foundation/: mod.rs
src/dfx-core/src/fs/: composite.rs  mod.rs
src/dfx-core/src/http/: get.rs  mod.rs  retryable.rs
src/dfx-core/src/identity/: delegation.rs  mod.rs  (+6 more)
src/dfx/assets/: README.adoc  README.md  build.rs  consent.txt  dfinity-color-xterm256.aart  dfinity-nocolor.aart  dfx-asset-sources.json  dfx-asset-sources.toml  portal_rev.txt  prepare_assets.rs  welcome.txt
src/dfx/examples/: dfx-nns-install.rs
src/dfx/src/: actors.rs  dfx-schema.rs  main.rs
src/ic_http_agent/: Cargo.toml  Cargo.toml.orig
src/ic_http_agent/src/: agent.rs  lib.rs
src/ic_identity_manager/: Cargo.toml  README.md
src/ic_identity_manager/examples/: main.rs
src/ic_identity_manager/src/: basic.rs  crypto_error.rs  encryption.rs  file_hierarchy.rs  identity.rs  lib.rs  main.rs  principal.rs  provider.rs  types.rs
src/ic_pem_identity/: Cargo.toml
src/ic_pem_identity/src/: lib.rs  lib_test.rs
src/identity_manager/: Cargo.toml
src/identity_manager/src/: crypto_error.rs  identity.rs  lib.rs  main.rs  principal.rs  provider.rs  signature.rs
src/lib/apply-patch/: Cargo.toml
(+2396 files in other folders)
