[workspace]
members = [
    "src/dfx",
    "src/dfx-core",
    "src/lib/apply-patch",
    "src/canisters/frontend/ic-asset",
    "src/canisters/frontend/icx-asset",
    "src/canisters/frontend/ic-certified-assets",
    "src/canisters/frontend/ic-frontend-canister",
]
default-members = ["src/dfx"]
resolver = "2"

[workspace.package]
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
repository = "https://github.com/dfinity/sdk"
rust-version = "1.75.0"
license = "Apache-2.0"

[workspace.dependencies]
candid = "0.10.3"
candid_parser = "0.1.3"
ic-agent = { git = "https://github.com/dfinity/agent-rs.git", rev = "d537a790a1d4d12f3882f5443a5c03d70ef9f4d8" }
ic-asset = { path = "src/canisters/frontend/ic-asset" }
ic-cdk = "0.12.0"
ic-identity-hsm = { git = "https://github.com/dfinity/agent-rs.git", rev = "d537a790a1d4d12f3882f5443a5c03d70ef9f4d8" }
ic-utils = { git = "https://github.com/dfinity/agent-rs.git", rev = "d537a790a1d4d12f3882f5443a5c03d70ef9f4d8" }

aes-gcm = "0.10.3"
anyhow = "1.0.56"
anstyle = "1.0.0"
argon2 = "0.4.0"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
base64 = "0.13.0"
byte-unit = "4.0.14"
bytes = "1.2.1"
clap = "4.2.0"
dialoguer = "0.11.0"
directories-next = "2.0.0"
flate2 = { version = "1.0.11", default-features = false }
futures = "0.3.21"
hex = "0.4.3"
humantime = "2.1.0"
itertools = "0.10.3"
keyring = "1.2.0"
lazy_static = "1.4.0"
mime = "0.3.16"
mime_guess = "2.0.4"
num-traits = "0.2.14"
pem = "1.0.2"
proptest = "1.0.0"
reqwest = { version = "0.11.23", default-features = false, features = [
    "rustls-tls",
] }
ring = "0.16.11"
schemars = "0.8"
sec1 = "0.3.0"
serde = "1.0"
serde_bytes = "0.11.5"
serde_cbor = "0.11.1"
serde_json = "1.0.79"
sha2 = "0.10.6"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.9.0"
tar = "0.4.38"
semver = "1.0.6"
tempfile = "3.3.0"
thiserror = "1.0.24"
time = "0.3.9"
tokio = "1.35"
url = "2.1.0"
walkdir = "2.3.2"

[profile.release]
panic = 'abort'
lto = true

[profile.dev.package.argon2]
opt-level = 3

[profile.release.package.ic-frontend-canister]
opt-level = 'z'
