[workspace]
members = [
    "src/dfx",
    "src/dfx-core",
    "src/lib/apply-patch",
    "src/canisters/frontend/ic-asset",
    "src/canisters/frontend/icx-asset",
    "src/canisters/frontend/ic-certified-assets",
    "src/canisters/frontend/ic-frontend-canister",
]
default-members = ["src/dfx"]
resolver = "3"

[workspace.package]
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2024"
repository = "https://github.com/dfinity/sdk"
rust-version = "1.85.0"
license = "Apache-2.0"

[workspace.lints.clippy]
needless_lifetimes = "allow"
future_not_send = "warn"

[workspace.dependencies]
candid = "0.10.18"
candid_parser = "0.2.2"
dfx-core = { path = "src/dfx-core", version = "0.2.0" }
ic-agent = { git = "https://github.com/dfinity/agent-rs", rev = "7c597b0120d874ee59dca09a778779974d7dd0dd" }
ic-asset = { path = "src/canisters/frontend/ic-asset", version = "0.25.0" }
ic-cdk = "0.19.0-beta.2"
ic-identity-hsm = { git = "https://github.com/dfinity/agent-rs", rev = "7c597b0120d874ee59dca09a778779974d7dd0dd" }
ic-utils = { git = "https://github.com/dfinity/agent-rs", rev = "7c597b0120d874ee59dca09a778779974d7dd0dd" }
ic-management-canister-types = "0.5.0"

aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.56"
anstyle = "1.0.0"
argon2 = { version = "0.4.0", features = ["std"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
base64 = "0.13.0"
byte-unit = "4.0.14"
bytes = "1.2.1"
clap = "4.5"
clap_complete = "4.5"
dialoguer = "0.11.0"
directories-next = "2.0.0"
flate2 = { version = "1.0.11" }
futures = "0.3.21"
handlebars = "4.3.3"
hex = "0.4.3"
humantime = "2.1.0"
itertools = "0.10.3"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
    "sync-secret-service",
    "vendored",
] }
lazy_static = "1.4.0"
mime = "0.3.16"
mime_guess = "2.0.4"
num-traits = "0.2.14"
pem = "1.0.2"
proptest = "1.0.0"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
] }
ring = { version = "0.17.14", features = ["std"] }
schemars = "0.8"
sec1 = "0.3.0"
serde = "1.0"
serde_bytes = "0.11.5"
serde_cbor = "0.11.1"
serde_json = "1.0.79"
sha2 = "0.10.6"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.9.0"
tar = "0.4.38"
semver = "1.0.6"
tempfile = "3.3.0"
thiserror = "1.0.24"
time = "0.3.9"
tokio = "1.43"
url = { version = "2.1.0", features = ["serde"] }
walkdir = "2.3.2"

[profile.release]
panic = 'abort'
lto = true

[profile.dev.package.argon2]
opt-level = 3

[profile.release.package.ic-frontend-canister]
opt-level = 'z'
