[package]
name = "dfx-mock"
version = "0.1.0"
authors = ["DFINITY Team"]
edition = "2018"

[dependencies]
clap = "2.33.0"
console = "0.7.7"
failure = "0.1.5"
gotham = "0.4.0"
hyper = "0.12.33"
indicatif = "0.11.0"
rand = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.40"
serde_json = "1.0.40"

[[bin]]
name = "dfx2"
path = "src/main.rs"
test = false
doc = false
