[package]
name = "dfx"
version = "0.4.7"
authors = ["DFINITY Team"]
edition = "2018"
build = "assets/build.rs"

[[bin]]
name = "dfx"
path = "src/main.rs"

[build-dependencies]
tar = "0.4.26"
flate2 = "1.0.11"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.8"
actix-files = "0.1.4"
atty = "0.2.13"
clap = "2.33.0"
console = "0.7.7"
crossbeam = "0.7.3"
flate2 = "1.0.11"
futures = "0.1.28"
hex = "0.3.2"
ic-http-agent = { "path" = "../lib/ic_http_agent" }
indicatif = "0.12.0"
rand = "0.7.2"
reqwest = "0.9.20"
serde = "1.0"
serde_bytes = "0.11.2"
serde_cbor = "0.10.1"
serde_repr = "0.1.5"
serde_json = "1.0.40"
serde-idl = { "path" = "../lib/serde_idl" }
sysinfo = "0.9.6"
tar = "0.4.26"
tokio = "0.1"
url = "2.1.0"
wabt = "0.9.2"

[dev-dependencies]
env_logger = "0.6"
mockito = "0.20.0"
tempfile = "3.1.0"
