[package]
name = "ic-http-agent"
version = "0.1.0"
authors = ["Hans Larsen <hans.larsen@dfinity.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
error = "0.1.9"
hex = "0.4.0"
openssl = "0.10.24"
reqwest = "0.9.20"
serde = "1.0.101"
serde_bytes = "0.11.2"
serde_cbor = "0.10.1"

[dev-dependencies]
rand = "0.7.2"
