[package]
name = "serde-idl"
version = "0.1.0"
authors = ["Yan Chen <yan@dfinity.org>"]

[dependencies]
hex = "^0.3"
leb128 = "0.2.4"
log = "0.4"
serde = "1.0"
serde_bytes = "0.11"
paste = "0.1"
num_enum = "0.4.1"
dfx_info = { path = "../dfx_info" }

[dev-dependencies]
assert_cmd = "0.11"
serde_derive = "1.0"

[features]
default = []
