[package]
name = "dfx-core"
version = "0.0.1"
authors = ["DFINITY Team"]
edition = "2021"

[dependencies]
aes-gcm = "0.9.4"
argon2 = "0.4.0"
bip32 = "0.4.0"
hex = {version = "0.4.2", features = ["serde"] }
ic-agent = { version = "0.23.0", features = ["reqwest"] }
ic-identity-hsm = "0.23.0"
keyring = "1.2.0"
sec1 = { version = "0.3.0", features = ["std"] }
serde = "1.0"
serde_json = "1.0.79"
thiserror = "1.0.20"
