[package]
name = "dfx-core"
version = "0.0.1"
authors = ["DFINITY Team"]
edition = "2021"

[dependencies]
aes-gcm = "0.9.4"
argon2 = "0.4.0"
bip32 = "0.4.0"
byte-unit = { version = "4.0.14", features = ["serde"] }
candid = { version = "0.8.2", features = [ "random" ] }
dialoguer = "0.10.0"
directories-next = "2.0.0"
hex = {version = "0.4.2", features = ["serde"] }
humantime-serde = "1.1.1"
ic-agent = { version = "0.23.0", features = ["reqwest"] }
ic-identity-hsm = "0.23.0"
k256 = { version = "0.11.4", features = ["pem"] }
keyring = "1.2.0"
lazy_static = "1.4.0"
ring = "0.16.11"
schemars = "0.8"
sec1 = { version = "0.3.0", features = ["std"] }
serde = "1.0"
serde_json = "1.0.79"
slog = { version = "2.5.2", features = ["max_level_trace"] }
thiserror = "1.0.20"
tiny-bip39 = "1.0.0"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.1.0"
