[package]
name = "dfx"
version = "0.24.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
build = "assets/build.rs"

[[bin]]
name = "dfx"
path = "src/main.rs"

[build-dependencies]
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
bytes = "1"
flate2 = { version = "1.0.11", default-features = false, features = [
    "zlib-ng",
] }
hex = "0.4.3"
reqwest.workspace = true
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
tar = "0.4.26"
tokio = { version = "1.24.2", features = ["full"] }
toml = "0.7.3"
walkdir = "2.3.2"

[dependencies]
actix = "0.13.0"
aes-gcm.workspace = true
anstyle.workspace = true
anyhow.workspace = true
apply-patch.path = "../lib/apply-patch"
argon2.workspace = true
backoff.workspace = true
base64.workspace = true
byte-unit = { workspace = true, features = ["serde"] }
bytes.workspace = true
candid = { workspace = true }
candid_parser = { workspace = true, features = ["random", "assist"] }
cargo_metadata = "0.18.1"
clap = { workspace = true, features = [
    "derive",
    "env",
    "unstable-styles",
    "wrap_help",
] }
clap_complete = { workspace = true }
console = "0.15.0"
crc32fast = "1.3.2"
crossbeam = "0.8.1"
ctrlc = { version = "3.2.1", features = ["termination"] }
dfx-core.workspace = true
dialoguer = { workspace = true, features = ["fuzzy-select"] }
directories-next.workspace = true
flate2 = { workspace = true, default-features = false, features = ["zlib-ng"] }
fn-error-context = "0.2.0"
futures-util = "0.3.21"
futures.workspace = true
handlebars.workspace = true
hex = { workspace = true, features = ["serde"] }
humantime.workspace = true
hyper-rustls = { version = "0.24.1", default-features = false, features = [
    "webpki-roots",
    "http2",
] }
ic-agent.workspace = true
ic-asset.workspace = true
ic-cdk.workspace = true
ic-identity-hsm.workspace = true
ic-utils.workspace = true
ic-wasm = "0.8.0"
icrc-ledger-types = "0.1.5"
idl2json = "0.10.1"
indicatif = "0.16.0"
itertools.workspace = true
json-patch = "1.0.0"
keyring.workspace = true
lazy_static.workspace = true
mime.workspace = true
mime_guess.workspace = true
num-traits.workspace = true
os_str_bytes = { version = "6.3.0", features = ["conversions"] }
patch = "0.7.0"
pem.workspace = true
petgraph = "0.6.0"
rand = "0.8.5"
regex = "1.5.5"
reqwest = { workspace = true, features = ["blocking", "json"] }
ring.workspace = true
rust_decimal = "1.22.0"
rustls-webpki = "0.101.4"
schemars.workspace = true
sec1 = { workspace = true, features = ["std"] }
semver = { workspace = true }
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sha2.workspace = true
shell-words = "1.1.0"
slog = { workspace = true, features = ["max_level_trace"] }
slog-async.workspace = true
slog-term.workspace = true
socket2 = "0.5.5"
supports-color = "2.1.0"
sysinfo = "0.28.4"
tar.workspace = true
tempfile.workspace = true
term = "0.7.0"
thiserror.workspace = true
time = { workspace = true, features = [
    "serde",
    "macros",
    "serde-human-readable",
] }
tokio = { workspace = true, features = ["full"] }
url.workspace = true
walkdir.workspace = true
walrus = "0.21.1"
which = "4.2.5"
ci_info = "0.14"

[target.'cfg(windows)'.dependencies]
junction = "1.0.0"

[target.'cfg(unix)'.dependencies]
pocket-ic = { git = "https://github.com/dfinity/ic", rev = "179973553248415fc85679d853b48b0e0ec231c6" }

[dev-dependencies]
env_logger = "0.10"
proptest = "1.0"
mockito = "0.31.0"
tempfile = "3.1.0"
