[package]
name = "ic-http-agent"
version = "0.1.0"
authors = ["Hans Larsen <hans.larsen@dfinity.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
dfx_derive = { path = "../dfx_derive" }
dfx_info = { path = "../dfx_info" }
serde-idl = { path = "../serde_idl" }
error = "0.1.9"
futures = "0.3.1"
hex = "0.4.0"
openssl = "0.10.24"
reqwest = "0.10.0"
serde = "1.0.101"
serde_bytes = "0.11.2"
serde_cbor = "0.10"
url = "2.1.0"

[dev-dependencies]
tokio = "0.2.6"
mockito = "0.20.0"
rand = "0.7.2"
