[package]
name = "ic-identity-manager"
version = "0.6.5"
authors = ["DFINITY Stiftung"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.28"
pem = "0.7.0"
ring = "0.16.11"
serde = { version = "1.0", features = ["derive"] }

[dependencies.ic-agent]
version = "0.1.0"
git = "ssh://git@github.com/dfinity-lab/agent-rust.git"
branch = "next"
rev = "e61e646c7a810c13c1b3d898d1d2ed7366b67a0a"

[dependencies.ic-types]
version = "0.1.0"
git = "ssh://git@github.com/dfinity-lab/agent-rust.git"
branch = "next"
rev = "e61e646c7a810c13c1b3d898d1d2ed7366b67a0a"

[dev-dependencies]
serde_cbor = "0.10"
