[package]
name = "ic-identity-manager"
version = "0.6.6"
authors = ["DFINITY Stiftung"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.28"
pem = "0.7.0"
ring = "0.16.11"
serde = { version = "1.0", features = ["derive"] }

[dependencies.ic-agent]
version = "0.1.0"
git = "ssh://git@github.com/dfinity-lab/agent-rust.git"
branch = "pshahi/ingress-expiry"
rev = "c802682f1a50008eb6181af4237ed30e3c0bee34"

[dependencies.ic-types]
version = "0.1.0"
git = "ssh://git@github.com/dfinity-lab/agent-rust.git"
branch = "pshahi/ingress-expiry"
rev = "c802682f1a50008eb6181af4237ed30e3c0bee34"

[dev-dependencies]
serde_cbor = "0.10"
