[package]
name = "ic_pem_identity"
version = "0.1.0"
authors = ["DFINITY SDK Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-http-agent = { path = "../ic_http_agent" }
pem = "0.7.0"
ring = "0.16.11"
serde_cbor = "0.10"

[dev-dependencies]
rand = "0.7.3"
tempfile = "3.1.0"
