[package]
name = "identity_manager"
version = "0.1.0"
authors = ["eftychis <eftychis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.28"
pem = "0.7.0"
ring = "0.16.11"
serde = { version = "1.0", features = ["derive"] }
