[package]
edition = "2021"

name = "host"
description = "Rust Wasm Plugins Example"
version = "0.0.1"
rust-version = "1.84"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-wasm-plugins-example"
documentation = "https://github.com/tliron/rust-wasm-plugins-example"
authors = ["Tal Liron"]

readme = "../README.md"

categories = ["wasm"]                                      # https://crates.io/category_slugs
keywords = ["wasm", "wasi", "wit", "wasmtime", "examples"]

[dependencies]
anyhow = "1.0.97"
wasmtime = "31.0.0"
wasmtime-wasi = "31.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.44.2", features = ["macros"] }
async-trait = "0.1.85"
futures-util = {  version = "0.3.31", features = ["alloc", "std"] }
futures = "0.3.31"
thiserror = "1.0.31"
clap = { version ="4.5", features = [
    "derive",
    "env",
    "unstable-styles",
    "wrap_help",
] }
clap_complete = "4.5"
command_descriptor_derive = { path = "../command_descriptor_derive" }
