[package]
name = "ic-agent"
version = "0.6.1"
authors = ["Hans Larsen <hans.larsen@dfinity.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.35"
byteorder = "1.3.2"
base32 = "0.4.0"
candid = "0.3.1"
candid_derive = "0.2.2"
crc32fast = "1.2.0"
delay = "0.1.1"
hex = "0.4.0"
leb128 = "0.2.4"
openssl = "0.10.24"
rand = "0.7.2"
reqwest = "0.10.4"
serde = { version = "1.0.101", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.10"
url = "2.1.0"

[dev-dependencies]
mockito = "0.20.0"
proptest = "0.9.5"
tokio = "0.2.6"
