[package]
name = "ic-certified-assets"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust support for asset certification."
documentation = "https://docs.rs/ic-certified-assets"
categories = ["wasm", "filesystem", "data-structures"]
keywords = ["internet-computer", "dfinity"]

[dependencies]
base64.workspace = true
candid.workspace = true
hex.workspace = true
ic-cdk.workspace = true
ic-certification = "3.0.3"
ic-response-verification = "3.0.3"
ic-representation-independent-hash = "3.0.3"
itertools.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
sha2.workspace = true
percent-encoding = "2.3.1"

[dev-dependencies]
ic-http-certification = "3.0.3"
candid_parser.workspace = true
anyhow.workspace = true
ic-response-verification-test-utils = { git = "https://github.com/dfinity/response-verification.git", rev = "66d33cf61e6ac17ec895598dd7f584605637bb42" }
ic-certification-testing = { git = "https://github.com/dfinity/response-verification.git", rev = "66d33cf61e6ac17ec895598dd7f584605637bb42" }
ic-crypto-tree-hash = { git = "https://github.com/dfinity/ic.git", rev = "724ae4101bfdd8d4443126a6a8b1ec5ca9b68a12" }
