[package]
name = "icx-asset"
version = "0.20.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
description = "CLI tool to manage assets on an asset canister on the Internet Computer."
documentation = "https://docs.rs/icx-asset"
repository = "https://github.com/dfinity/sdk"
license = "Apache-2.0"
categories = ["command-line-interface"]
keywords = ["internet-computer", "agent", "icp", "dfinity", "asset"]

[dependencies]
anyhow = "1.0.34"
candid = "0.8.2"
clap = { version = "3.0.14", features = ["derive", "cargo"] }
delay = "0.3.1"
humantime = "2.0.1"
ic-agent = "0.23.0"
ic-asset = { path = "../ic-asset" }
ic-utils = "0.23.0"
libflate = "1.2.0"
num-traits = "0.2"
pem = "1.0.1"
serde = "1.0.115"
serde_bytes = "0.11.5"
serde_json = "1.0.57"
slog = { version = "2.5.2", features = ["max_level_trace"] }
slog-async = "2.4.0"
slog-term = "2.9.0"
time = { version = "0.3.9", features = ["formatting", "local-offset"] }
tokio = { version = "1.23.1", features = ["full", "rt"] }
thiserror = "1.0.24"
walkdir = "2.3.1"
