[package]
name = "icx-asset"
version = "0.21.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool to manage assets on an asset canister on the Internet Computer."
documentation = "https://docs.rs/icx-asset"
categories = ["command-line-interface"]
keywords = ["internet-computer", "agent", "icp", "dfinity", "asset"]

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
candid = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "unstable-styles", "wrap_help" ] }
delay = "0.3.1"
humantime.workspace = true
ic-agent = { workspace = true }
ic-asset.workspace = true
ic-utils = { workspace = true }
libflate = "1.2.0"
num-traits.workspace = true
pem.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
slog = { workspace = true, features = ["max_level_trace"] }
slog-async.workspace = true
slog-term.workspace = true
time = { workspace = true, features = ["formatting", "local-offset"] }
tokio = { workspace = true, features = ["full", "rt"] }
thiserror.workspace = true
walkdir.workspace = true
