[package]
name = "wasm-utils"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.6"
ic-cdk-macros = "0.6"
serde = "1.0"
serde_bytes = "0.11"
candid = "0.8"
ic-wasm = { version = "0.3", default-features = false }
walrus = "0.19"

[profile.release]
lto = true
opt-level = 'z'
